# watchwith

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
scripts/: build-macos.sh  build-windows.ps1  run-macos.sh  run-windows.ps1
src/: app.cpp  app.h  main.cpp
src/net/: media-bridge.cpp  media-bridge.h  media-codec.cpp  media-codec.h  peer-connection.cpp  peer-connection.h  session.cpp  session.h
src/ui/: canvas-view.cpp  canvas-view.h  main-window.cpp  main-window.h  session-dialog.cpp  session-dialog.h
